[gd_scene load_steps=9 format=3 uid="uid://chlv5edux6djp"]

[ext_resource type="Script" uid="uid://cwkme0l3spiqq" path="res://Script/apple_tree.gd" id="1_s0nuj"]
[ext_resource type="Texture2D" uid="uid://1klu8mxgw7hu" path="res://Art/survivalgame-appletree.png" id="2_5kpqq"]
[ext_resource type="Resource" uid="uid://bxh80xtausyi0" path="res://Inventory/Items/apple.tres" id="2_w54em"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b72hq"]
atlas = ExtResource("2_5kpqq")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_i82r7"]
atlas = ExtResource("2_5kpqq")
region = Rect2(80, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_hvlb6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b72hq")
}],
"loop": true,
"name": &"Apples",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i82r7")
}],
"loop": true,
"name": &"No_Apples",
"speed": 0.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x3w4c"]
radius = 35.1283

[sub_resource type="CircleShape2D" id="CircleShape2D_5kpqq"]
radius = 6.08276

[node name="Apple_Tree" type="Node2D"]
script = ExtResource("1_s0nuj")
item = ExtResource("2_w54em")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hvlb6")
animation = &"No_Apples"

[node name="Pick_Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pick_Area"]
shape = SubResource("CircleShape2D_x3w4c")

[node name="Growth_Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]

[node name="collision" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision"]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_5kpqq")

[connection signal="body_entered" from="Pick_Area" to="." method="_on_pick_area_body_entered"]
[connection signal="body_exited" from="Pick_Area" to="." method="_on_pick_area_body_exited"]
[connection signal="timeout" from="Growth_Timer" to="." method="_on_growth_timer_timeout"]
